# Irrigation-robot

./: .gitignore  LICENSE  README.md
MAIN/SYSTEM/bluetooth/: usart.c  usart.h
MAIN/SYSTEM/sys/: sys.h
MAIN/USER/: Template.uvguix.beimo  Template.uvguix.blue  Template.uvoptx  Template.uvprojx  main.c
MAIN/USER/run/: run.c  run.h
MAIN/application/CONTROL/: control.h
MAIN/application/EXTI/: exti.h
MAIN/application/InfCollect/: InfCollect.c  InfCollect.h
MAIN/application/OPENMV/: openmv.c
MAIN/application/arm/: arm.c  arm.h
MAIN/application/chassis/: chassis.c  chassis.h
MAIN/application/serove/: serove.c  serove.h
MAIN/application/task/: task.c
MAIN/bsp/CONTROL/: control.c
MAIN/bsp/GuanDian/: guandian.c  guandian.h
MAIN/bsp/InfCollect/: InfCollect.c
MAIN/bsp/KEY/: key.c
MAIN/bsp/LCD/: lcd.c
MAIN/bsp/LED/: led.c
MAIN/bsp/LINE/: line.c  line.h
MAIN/bsp/MP3/: mp3.c  mp3.h
MAIN/bsp/TIMER/: timer.c  timer.h
MAIN/bsp/bluetooth/: bluetooth.h
MAIN/bsp/dma/: dma.c  dma.h
MAIN/bsp/exit/: exit.c  exit.h
MAIN/bsp/exti/: exti.c  exti.h
MAIN/bsp/gpio/: gpio.c  gpio.h
MAIN/bsp/iic/: iic.h
MAIN/bsp/tim/: tim.c  tim.h
MAIN/bsp/usart/: usart.c  usart.h
MAIN/module/CONTROL/: control.c
MAIN/module/EXTI/: exti.c
MAIN/module/GuanDian/: guandian.c
MAIN/module/LCD/: lcd.c
MAIN/module/OPENMV/: openmv.c  openmv.h
MAIN/module/bluetooth/: bluetooth.c  bluetooth.h
MAIN/module/encoder/: encoder.c  encoder.h
MAIN/module/gray/: gray.c  gray.h
MAIN/module/gyro/: gyro.c  gyro.h
MAIN/module/key_3x3/: key.c
MAIN/module/lidar/: lidar.c  lidar.h
MAIN/module/motor/: motor.c  motor.h
MAIN/module/mp3/: mp3.c  mp3.h
MAIN/module/oled/: OLED_Font.h
MAIN/module/photoelectric/: photoelectric.c  photoelectric.h
MAIN/module/pid/: pid.c  pid.h
MAIN/module/servo/: servo.c  servo.h
MAIN/module/task/: task.c
MAIN/module/voice/: voice.h
MAIN2/USER/: Template.uvprojx
MAIN2/USER/run/: run.h
MAIN2/application/OPENMV/: openmv.h
MAIN2/bsp/gpio/: gpio.h
MAIN2/module/lcd/: FONT.H
SLAVE/: Project.uvguix.blue  Project.uvoptx  Project.uvprojx
SLAVE/Application/balanceTank/: balanceTank.c  balanceTank.h
SLAVE/Listings/: Project.map  startup_stm32f10x_md.lst
SLAVE/Module/mpu/: mpu6050.c  mpuiic.c
SLAVE/Module/mpu/eMPL/: inv_mpu.c
SLAVE/Module/servo/: servo.c  servo.h
SLAVE/Objects/: Project.axf  Project.build_log.htm  Project.htm  Project.lnp  Project_Target 1.dep  balancetank.crf  balancetank.d  core_cm3.d  delay.crf  delay.d  iic.crf  iic.d  inv_mpu.crf  inv_mpu.d  inv_mpu_dmp_motion_driver.crf  inv_mpu_dmp_motion_driver.d  key.crf  key.d  led.crf  led.d  main.crf  main.d  mpu6050.crf  mpu6050.d  mpuiic.crf  mpuiic.d  oled.crf  oled.d  pid.d  pwm.crf  servo.crf  servo.d  servo_1.crf  servo_1.d  stm32f10x_adc.d  stm32f10x_bkp.crf  stm32f10x_bkp.d  stm32f10x_dac.crf  stm32f10x_dac.d  stm32f10x_dbgmcu.d  (+33 more)
SLAVE/System/key/: Key.h
SLAVE/System/pid/: pid.h
SLAVE/System/sys/: sys.h
SLAVE/System/timer/: timer.c  timer.h
SLAVE/System/usart/: usart.c  usart.h
SLAVE/User/: main.c
VERSION1/MAIN/SYSTEM/led/: led.h
VERSION1/MAIN/USER/: Template.uvguix.Admin  Template.uvoptx
VERSION1/MAIN/USER/run/: run.c
VERSION1/MAIN/application/CONTROL/: control.c
VERSION1/MAIN/application/arm/: arm.h
VERSION1/MAIN/application/chassis/: chassis.h
VERSION1/MAIN/application/task/: task.c
VERSION1/MAIN/bsp/exti/: exti.c  exti.h
VERSION1/MAIN/bsp/iic/: iic.c
VERSION1/MAIN/bsp/tim/: tim.h
VERSION1/MAIN/bsp/usart/: usart.h
VERSION1/MAIN/module/bluetooth/: bluetooth.c
VERSION1/MAIN2/USER/: Template.uvguix.blue  main.c
VERSION1/SLAVE/Listings/: Project.map
VERSION1/SLAVE/Objects/: Project_Target 1.dep  core_cm3.crf  misc.crf  misc.d  pwm.d  stm32f10x_adc.crf  stm32f10x_can.crf  stm32f10x_can.d  stm32f10x_cec.crf  stm32f10x_cec.d  stm32f10x_crc.crf  stm32f10x_crc.d  stm32f10x_dbgmcu.crf  stm32f10x_dma.d  stm32f10x_flash.d  stm32f10x_it.crf  stm32f10x_pwr.crf  stm32f10x_rcc.crf  stm32f10x_rtc.d  stm32f10x_sdio.d  usart.crf  usart.d
VERSION1/VISION/: D区组.py  云台舵机.py
VERSION2/: 整体方案.md
VERSION2/Irrigation_framework/: Irrigation_framework.ioc
VERSION2/Irrigation_framework - 副本/: openocd_jlink.cfg
VERSION2/Irrigation_robot/MAIN/: .mxproject  CMakeLists.txt  Irrigation_framework.ioc  Makefile  Makefile copy  STM32H743XIHx_FLASH.ld  openocd_dap.cfg  openocd_jlink.cfg  stm.ld
VERSION2/Irrigation_robot/MAIN/Core/Inc/: main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  tim.h
VERSION2/Irrigation_robot/MAIN/Core/Src/: dma.c  fdcan.c  gpio.c  main.c  rtc.c  stm32h7xx_it.c  tim.c  usart.c
VERSION2/Irrigation_robot/MAIN/application/: robot.c  robot_def.h
VERSION2/Irrigation_robot/MAIN/application/chassis/: chassis.c  chassis.h
VERSION2/Irrigation_robot/MAIN/bsp/can/: bsp_can.c  bsp_can.h  bsp_can.md
VERSION2/Irrigation_robot/MAIN/bsp/usart/: bsp_usart.c  bsp_usart.h  bsp_usart.md
VERSION2/Irrigation_robot/MAIN/module/daemon/: daemon.c
VERSION2/Irrigation_robot/MAIN/module/gyro/: gyro.c  gyro.h
VERSION2/Irrigation_robot/MAIN/module/lidar/: lidar.c  lidar.h
VERSION2/Irrigation_robot/MAIN/modules/daemon/: daemon.h
VERSION2/Irrigation_robot/MAIN/modules/gyro/: gyro.c  gyro.h
VERSION2/Irrigation_robot/MAIN/modules/lidar/: lidar.c  lidar.h
VERSION2/MAIN/: .mxproject  Irrigation_framework.ioc  Makefile  STM32H743XIHx_FLASH.ld  openocd_dap.cfg
VERSION2/MAIN/application/: robot.c  robot.h  robot_def.h  robot_queue.c  robot_queue.h  robot_task.h
VERSION2/MAIN/bsp/: bsp_init.h
VERSION2/SLAVE/: .mxproject  Irrigation_framework.ioc  Makefile  STM32H743XIHx_FLASH.ld  make  openocd_jlink.cfg
VERSION2/SLAVE/application/: application.md  robot.c  robot.h  robot_def.h  robot_task.h  rtos.h
VERSION2/SLAVE/bsp/: bsp_init.h
VERSION2/test/: log.txt
VERSION2/test/USER/: main.c  stm32f4xx_it.h
VISION/: D区组.py
test/FWLIB/inc/: stm32f4xx_crc.h  stm32f4xx_cryp.h
test/FWLIB/src/: stm32f4xx_rng.c
test/SYSTEM/sys/: sys.h
test/USER/run/: run.h
test/application/task/: task.h
test/bsp/usart/: usart.c
(+241 files in other folders)
